cambios realizados, batallas mejoradas
